# interactive_classification

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/project/: api_models.py  dependencies.py  utils.py
backend/project/endpoints/: __init__.py  map.py
docker/backend/app/: Dockerfile
docker/frontend/: Dockerfile
frontend/: .eslintrc.cjs  .parcelrc  .proxyrc  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  Test.tsx  index.html  main.tsx
frontend/src/components/: Router.tsx  Routes.tsx
frontend/src/modules/: fastapi.ts  predict.ts
frontend/src/new/: MapComp.tsx
frontend/src/stores/: RootStore.ts  RouterStore.ts  index.ts
